/** \file
 *
 *  This file contains special DoxyGen information for the generation of the main page and other special
 *  documentation pages. It is not a project source file.
 */

 /** \page Page_ChangeLog Project Changelog
  *
  *  \section Sec_ChangeLog120730 Version 120730 (BETA)
  *  <b>New:</b>
  *  - Core:
  *   - Added new, revamped modular build system with new makefile templates
  *   - Added support for the BitWizard Multio and Big-Multio boards
  *   - Added support for the DorkbotPDX Duce board
  *   - Added support for the Olimex AVR-USB-32U4 board
  *   - Added support for the Olimex AVR-USB-T32U4 board
  *   - Added new Endpoint_ConfigureEndpointTable() function
  *   - Added new Pipe_ConfigurePipeTable() function
  *   - Added build test to verify correct compilation of all board drivers using all driver APIs
  *   - Added build test to verify correct compilation of all bootloaders using all supported devices  
  *   - Added build test to verify that there are no detectable errors in the codebase via static analysis
  *   - Added new JTAG_ENABLE() macro for the AVR8 architecture
  *  - Library Applications:
  *   - Modified the CDC Host demos to set a default CDC Line Encoding on enumerated devices
  *   - Added Dataflash operational checks and aborts to all projects using the Dataflash to ensure it is working correctly before use
  *   - Added new SerialToLCD user project contributed by Simon Foster
  *   - Added new RESET_TOGGLES_LIBUSB_COMPAT compile time option to the AVRISP-MKII clone programmer project (thanks to Robert Spitzenpfeil)
  *
  *  <b>Changed:</b>
  *  - Core:
  *   - Android Accessory Host property strings changed from a struct of pointer to an array to prevent unaligned access on greater than 8-bit architectures
  *   - Audio Device Class driver changed to also require the index of the Audio Control interface within the device, for SET/GET/CUR/MIN/MAX/RES property adjustments