@@ -118,6 +118,7 @@
  *   - Olimex AVR-USB-162
  *   - Olimex AVR-USB-32U4
  *   - Olimex AVR-USB-T32U4
+ *   - Olimex AVR-ISP-MK2
  *   - Paranoid Studio's US2AX (V1, V2 and V3 hardware revisions)
  *   - PJRC Teensy (1.x and 2.x versions)
  *   - Sparkfun U2 Breakout Board
