@@ -147,6 +147,8 @@
 			#include "AVR8/OLIMEX32U4/Buttons.h"		
 		#elif (BOARD == BOARD_OLIMEXT32U4)
 			#include "AVR8/OLIMEXT32U4/Buttons.h"		
+		#elif (BOARD == BOARD_OLIMEXISPMK2)
+			#include "AVR8/OLIMEXISPMK2/Buttons.h"	
 		#else
 			#include "Board/Buttons.h"
 		#endif
